fix home page to vision footer and spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -96,16 +96,16 @@ img {
 }
 
 .ptb-100 {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .pt-100 {
-    padding-top: 100px;
+    padding-top: 40px;
 }
 
 .pb-70 {
-    padding-bottom: 70px;
+    padding-bottom: 10px;
 }
 
 .pb-100 {
